src/vm/snapshots/hebi4__vm__tests__tests__inputs__run__arithmetic_add.snap
---
source: src/vm/tests.rs
expression: snapshot
---
SOURCE
do {
let result = 1
let a = 2
let b = 2

result += a + b  // 1 + 2 + 2 = 5
result += 1 + b  // 5 + 1 + 2 = 8
result += a + 1  // 8 + 2 + 1 = 11

result  //=11
}

OK
Int(11)
