src/vm/snapshots/hebi4__vm__tests__tests__inputs__run__arithmetic_div.snap
---
source: src/vm/tests.rs
expression: snapshot
---
SOURCE
let result = 10
let a = 10
let b = 10

# note: integer division
result /= a  / b  # 10 / (10 / 10) = 10
result /= 10 / b  # 10 / (10 / 10) = 10
result /= a  / 10 # 10 / (10 / 10) = 10

result #=10




OK
Int(10)
