src/vm/snapshots/hebi4__vm__tests__tests__inputs__run__arithmetic_rem.snap
---
source: src/vm/tests.rs
expression: snapshot
---
SOURCE
do {
let result = 5
let a = 10
let b = 19

// note: integer division
result %= a % b  // 5 % (10 % 19) = 5 % 10 = 5
result %= 10 % b // 5 % (10 % 19) = 5 % 10 = 5
result %= a % 19 // 5 % (10 % 19) = 5 % 10 = 5

result //=5
}

OK
Int(5)
