src/vm/snapshots/hebi4__vm__tests__tests__inputs__run__arithmetic_sub.snap
---
source: src/vm/tests.rs
expression: snapshot
---
SOURCE
do {
let result = 1
let a = 2
let b = 2

result -= a - b  // 1 - (2 - 2) = 1
result -= 1 - b  // 1 - (1 - 2) = 1 + 1 = 2
result -= a - 1  // 2 - (2 - 1) = 2 - 1 = 1

result  //=1
}

OK
Int(1)
