src/vm/snapshots/hebi4__vm__tests__tests__inputs__run__compare_expr_eq_bool.snap
---
source: src/vm/tests.rs
expression: snapshot
---
SOURCE
let a = true
let b = true

a == b

OK
Bool(true)
