src/vm/snapshots/hebi4__vm__tests__tests__inputs__run__compare_expr_eq_float.snap
---
source: src/vm/tests.rs
expression: snapshot
---
SOURCE
let a = 0.0
let b = 1.0

a == b

OK
Bool(false)
