src/vm/snapshots/hebi4__vm__tests__tests__inputs__run__compare_expr_eq_nil.snap
---
source: src/vm/tests.rs
expression: snapshot
---
SOURCE
let a = nil
let b = nil

a == b

OK
Bool(true)
